examples/type_system/failing/78_hm_inline_call_no_runtime_fallback.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit {
    // HM can infer this inline lambda call as Int.
    // Runtime-boundary compatibility typing cannot infer call returns for inline function expressions.
    let _x: String = (\(n: Int) -> n)(1)
}
